src/objects/CCRE_Service_Invoice_Info_line_items__c.object
<CustomObject>
    <fields>
        <fullName>Attribute_Label__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Attribute Label</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attribute_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Attribute Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attribute_Value__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Attribute Value</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attribute_for_customer__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Attribute for customer</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offer__c</fullName>
        <label>Quote/Proposal</label>
        <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
        <relationshipLabel>CCRE Service Invoice Info line items</relationshipLabel>
        <relationshipName>CCRE_Service_Invoice_Info_line_items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>CCRE Service Invoice Info line item</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>CCRE Service Invoice Info line items Nam</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CCRE Service Invoice Info line items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>